--- a/CV-TranNgocBinh.html
+++ b/CV-TranNgocBinh.html
@@ -13,15 +13,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
     integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="css/guest-homepage.css">
+  <link rel="stylesheet" href="css/CV-TranNgocBinh.css">
 </head>
 
 <body>
-  <!-- Navbar -->
+  <!-- thanh điều hướng -->
   <header>
     <nav class="navbar navbar-expand-lg navbar-light ">
-      <div class="container-fluid">
-        <img src="imgs/logooo.png" alt="">
+      <div class="container">
+        <img src="/imgs/icon.png" alt="">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -38,13 +38,16 @@
               <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Experience</a>
+              <a class="nav-link" href="#experience">Experience</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contactUs">Contact us</a>
+            </li>
+            <li class="nav-item">
+              <a style="border-bottom:1px solid white;" class="nav-link" href="guest-home.html">Back Home</a>
             </li>
           </ul>
         </div>
@@ -64,25 +67,25 @@
       </div>
       <div class="carousel-inner" id="home">
         <div class="carousel-item active">
-          <img src="imgs/logo3.jpg" class="d-block w-100" alt="..." style="width: 20px;">
-          <div class="carousel-caption d-none d-md-block ">
-            <h5>First slide label</h5>
+          <img src="imgs/logo1.jpg" class="d-block w-100" alt="..." style="width: 20px;">
+          <div id="banner-content" class="carousel-caption d-none d-md-block ">
+            <h2>HTML5/CSS3</h2>
 
-            <p>Some representative placeholder content for the first slide.</p>
+            <p>HTML5 is a markup language used for structuring and presenting Web.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="imgs/logo1.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+          <div id="banner-content" class="carousel-caption d-none d-md-block">
+            <h2>JavaScript/jQuery</h2>
+            <p>jQuery: Write Less, Do More...</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="imgs/logo2.PNG" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+          <img src="imgs/logo1.jpg" class="d-block w-100" alt="...">
+          <div id="banner-content" class="carousel-caption d-none d-md-block">
+            <h2>UX/UI Developer</h2>
+            <p>I develop website using Bootstrap front-end framework..</p>
           </div>
         </div>
       </div>
@@ -102,27 +105,29 @@
     <div class="container">
       <div class="text-center">
         <h1 style="font-size: 36px;">I create beautiful responsive websites, Yes I am a UX geek</h1>
-        <p style="color:#858585; font-size: 14px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-          interdum erat et neque tincidunt
-          volutpat. Cras eget augue id dui varius pretium. Cras posuere dolor risus. Pellentesque elementum ultricies
-          quam, sit amet rhoncus nisl viverra in. Cras imperdiet nisi a euismod molestie. Ut a metus arcu. Pellentesque
-          feugiat dictum erat. Nulla vehicula condimentum purus, quis imperdiet nisl ultricies eleifend. Nulla quis
-          rhoncus risus. Ut vel vehicula urna.</p>
+        <p style="color:#858585; font-size: 14px;">
+          I'm Tran Ngoc Binh, 20 years old this year, I was born and raised in the beloved homeland of Ha Nam.
+          Currently, I am studying at Thuy Loi University, majoring in information technology. After a period of
+          studying the subject "Web Development Platform", I myself feel quite good and interesting. And I designed
+          myself a website interface with the knowledge I learned from the lecturer. Thereby, I find that self-study to
+          find out external sources of knowledge in the university environment is quite necessary and useful for
+          students. Self-study will help you understand the lesson more deeply and discover more interesting things to
+          apply to your immediate study, and your job after graduation.</p>
       </div>
     </div>
 
   </section>
-  <!-- aboutUs -->
+  <!--aboutUS -->
   <section id="aboutUs">
     <div class="container">
       <content>
         <div id="content">
           <div id="heading">
             <h2 class="heading1">
-              I am LuuVietHoang, a UI Designer & developer
+              UI Designer & Front-end developer
             </h2>
             <h3 class="heading2">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
+              My knowledge
             </h3>
           </div>
         </div>
@@ -132,12 +137,13 @@
               <div class="card">
                 <div class="item1">
                   <i id="icon1" class="fa-solid fa-desktop"></i>
-                  <h3>Responsive Design</h3>
+                  <h3>Design</h3>
                 </div>
                 <div class="card-body">
-                  <p class="card-text">GLorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum
-                    erat
-                    et neque tincidunt volutpat. Cras eget augue id dui varius pretium.</p>
+                  <p class="card-text">Design is a broad concept and is used across many areas of expertise, so giving a
+                    general concept for design is by no means exhaustive. Natural design is understood as the process of
+                    going from idea to creation to produce a good quality product and to make a lasting impression on
+                    the public.</p>
                 </div>
 
               </div>
@@ -149,9 +155,11 @@
                   <h3>HTML5/CSS3 Dev</h3>
                 </div>
                 <div class="card-body">
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum
-                    erat
-                    et neque tincidunt volutpat. Cras eget augue id dui varius pretium.</p>
+                  <p class="card-text">If you are an experienced web developer who wants to start using HTML5 and CSS3
+                    right now, this is a quick, practical, code-rich reference for you. This hands-on guide gets
+                    straight to the essence of what is new and important in HTML5 and CSS3, and what a web developer
+                    needs to know to put them to immediate use.
+                  </p>
                 </div>
               </div>
             </div>
@@ -162,9 +170,10 @@
                   <h3>JavaScript jQuery</h3>
                 </div>
                 <div class="card-body">
-                  <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum
-                    erat
-                    et neque tincidunt volutpat. Cras eget augue id dui varius pretium.</p>
+                  <p class="card-text">JavaScript is an independent language and can exist on its own. JQuery is a
+                    JavaScript library. It would not have been invented had JavaScript was not there. jQuery is still
+                    dependent on JavaScript as it has to be converted to JavaScript for the browser in-built JavaScript
+                    engine to interpret and run it.</p>
                 </div>
               </div>
             </div>
@@ -174,16 +183,11 @@
     </div>
   </section>
   <div>
-    <!-- maxim -->
     <section id="maxim" class="ag-parlex">
       <div class="bg">
-        <div style="
-          text-align: center;
-          padding-top: 75px;
-          padding-bottom: 65px;
-          " class="container secPad text-center">
-          <h2>Do what you like - Love what you do</h2>
-          <h3>Hoang Tu GIo</h3>
+        <div style="text-align: center;" class="container secPad text-center">
+          <h2>"Never stop learning because life never stop teaching."</h2>
+          <h3>By : My Father</h3>
         </div>
       </div>
     </section>
@@ -209,7 +213,7 @@
             <div class="col-md-8">
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-                  style="width: 90%;">
+                  style="width: 60%;">
 
                 </div>
               </div>
@@ -220,7 +224,7 @@
             <div class="col-md-8">
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-                  style="width: 90%;">
+                  style="width: 50%;">
 
                 </div>
               </div>
@@ -231,7 +235,7 @@
             <div class="col-md-8">
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-                  style="width: 80%;">
+                  style="width: 30%;">
 
                 </div>
               </div>
@@ -242,7 +246,7 @@
             <div class="col-md-8">
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-                  style="width: 90%;">
+                  style="width: 10%;">
 
                 </div>
               </div>
@@ -261,7 +265,7 @@
             <div class="col-md-8">
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"
-                  style="width: 90%;">
+                  style="width: 60%;">
 
                 </div>
               </div>
@@ -272,7 +276,7 @@
             <div class="col-md-8">
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
-                  style="width: 80%;">
+                  style="width: 10%;">
 
                 </div>
               </div>
@@ -283,7 +287,7 @@
             <div class="col-md-8">
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
-                  style="width: 75%;">
+                  style="width: 10%;">
 
                 </div>
               </div>
@@ -446,10 +450,10 @@
 
               <article class="col-sm-4 isotopeItem webdesign">
                 <div class="portfolio-item">
-                  <img src="imgs/anhtranbinh.jpg" alt="" />
+                  <img src="imgs/po1.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
+                      <a href="imgs/po1.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -460,10 +464,10 @@
 
               <article class="col-sm-4 isotopeItem photography">
                 <div class="portfolio-item">
-                  <img src="imgs/anhtranbinh.jpg" alt="" />
+                  <img src="imgs/po3.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
+                      <a href="imgs/po3.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -475,10 +479,10 @@
 
               <article class="col-sm-4 isotopeItem photography">
                 <div class="portfolio-item">
-                  <img src="imgs/anhtranbinh.jpg" alt="" />
+                  <img src="imgs/po2.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
+                      <a href="imgs/po2.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -489,10 +493,10 @@
 
               <article class="col-sm-4 isotopeItem print">
                 <div class="portfolio-item">
-                  <img src="imgs/anhtranbinh.jpg" alt="" />
+                  <img src="imgs/po4.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
+                      <a href="imgs/po4.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -503,10 +507,10 @@
 
               <article class="col-sm-4 isotopeItem photography">
                 <div class="portfolio-item">
-                  <img src="imgs/anhtranbinh.jpg" alt="" />
+                  <img src="imgs/po5.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
+                      <a href="imgs/po5.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -517,10 +521,10 @@
 
               <article class="col-sm-4 isotopeItem webdesign">
                 <div class="portfolio-item">
-                  <img src="imgs/anhtranbinh.jpg" alt="" />
+                  <img src="imgs/po6.jpg" alt="" />
                   <div class="portfolio-desc align-center">
                     <div class="folio-info">
-                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
+                      <a href="imgs/po6.jpg" class="fancybox">
                         <h5>Project Name</h5>
                         <i class="fa fa-arrows-alt fa-2x"></i>
                       </a>
@@ -529,47 +533,7 @@
                 </div>
               </article>
 
-              <article class="col-sm-4 isotopeItem print">
-                <div class="portfolio-item">
-                  <img src="imgs/anhtranbinh.jpg" alt="" />
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
-                        <h5>Project Name</h5>
-                        <i class="fa fa-arrows-alt fa-2x"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </article>
 
-              <article class="col-sm-4 isotopeItem photography">
-                <div class="portfolio-item">
-                  <img src="imgs/anhtranbinh.jpg" alt="" />
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
-                        <h5>Project Name</h5>
-                        <i class="fa fa-arrows-alt fa-2x"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </article>
-
-              <article class="col-sm-4 isotopeItem print">
-                <div class="portfolio-item">
-                  <img src="imgs/anhtranbinh.jpg" alt="" />
-                  <div class="portfolio-desc align-center">
-                    <div class="folio-info">
-                      <a href="imgs/anhtranbinh.jpg" class="fancybox">
-                        <h5>Project Name</h5>
-                        <i class="fa fa-arrows-alt fa-2x"></i>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </article>
             </div>
 
           </div>
@@ -580,7 +544,7 @@
 
     </div>
   </section>
-  <!-- contactUS -->
+  <!-- contact -->
   <section id="contactUs" class="secPad">
     <div class="container">
       <div class="row">
@@ -626,7 +590,7 @@
           </address>
           <h4>Phone:</h4>
           <address>
-            0388888666<br>
+            0965225460<br>
           </address>
         </div>
       </div>
@@ -636,16 +600,15 @@
   <footer>
     <div class="container">
       <div class="social text-center">
-        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-facebook-messenger"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
-        <a href="#"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.facebook.com/ngocbinh.tran.1690"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com/frigg_20/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://github.com/TranNgocBinhTLU"><i class="fa-brands fa-github"></i></a>
       </div>
     </div>
   </footer>
 
-  <script src="js/guest-homepage.js"></script>
+  </div>
+  <script src="js/cv.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
